[package]
name = "dungeons_and_delta_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "*"
tokio-tungstenite = "*"
log = "*"
tokio = {version = "*", features = ["rt", "net", "macros", "rt-multi-thread", "sync"]}
futures-util = "*"
env_logger = "*"
json = "*"
uuid = { version = "*", features = ["v4"] }